--- a/game.html
+++ b/game.html
@@ -9,6 +9,9 @@
 <canvas id="gameCanvas" width="600" height="400"></canvas>
 <script src="js/imageloader.js"></script>
 <script src="js/compengine.js"></script>
+<script src="js/compenginecom.js"></script>
+<script src="js/utils.js"></script>
+<script src="js/sortedarray.js"></script>
 <script src="js/main.js"></script>
 
 </body>
