--- a/examples/rotation.html
+++ b/examples/rotation.html
@@ -52,15 +52,16 @@
 
 			let executor = new ExecutorComponent()
 				.waitTime(3) // execute with a delay
+			//	.beginIf(() => true) TODO if, else, inner if, inner else and so
 				.beginRepeat(2)
 				.execute(() => { console.log("REP"); })
 				.endRepeat()
 				.beginWhile(() => Math.random() > 0.9)
 				.execute(() => {  console.log("WHILE")})
 				.endWhile()
-				.beginInterval(2)
-				.execute(() => { console.log("interval")})
-				.endInterval()
+			//	.beginInterval(2)
+			//	.execute(() => { console.log("interval")})
+			//	.endInterval()	
 				.addComponent(rect2, rot)
 				.waitTime(2)
 				.execute(() => rot.finish())
