--- a/examples/rotation.html
+++ b/examples/rotation.html
@@ -51,29 +51,35 @@
 			let rot = new RotationAnim();
 
 			let executor = new ExecutorComponent()
-				.waitTime(3) // execute with a delay
-				.beginRepeat(2)
-				
+				.waitTime(3) // execute with a delay				
 				.beginIf(() => true)
-					.execute(() => console.log("IF"))
+					.execute(() => console.log("1"))
 					.beginIf(() => false)
-						.execute(() => console.log("BUG"))
+						.execute(() => console.log("!!!!! 1 BUG"))
 					.endIf()
 					.beginIf(() => false)
-						.execute(() => console.log("BUG"))
+						.execute(() => console.log("!!!!! 2 BUG"))
+						.beginIf(() => false)
+							.execute(() => console.log("!!!!! 3 BUG"))
+						.else()
+							.execute(() => console.log("!!!!! 4 BUG"))
+						.endIf()
 					.else()
-						.execute(() => console.log("GOOD"))
+						.execute(() => console.log("2"))
+						.beginRepeat(2)
+							.beginRepeat(2)
+								.execute((cmp) => console.log("REP " +cmp.helpParam))
+							.endRepeat()
+						.endRepeat()
 					.endIf()
 				.else()
-					.execute(() => console.log("BUG"))
+					.execute(() => console.log("!!!!! 5 BUG"))
 				.endIf()
-				
-				.endRepeat()
 				.beginRepeat(2)
-				.execute(() => { console.log("REP"); })
+					.execute(() => { console.log("REP PODRUHE"); })
 				.endRepeat()
 				.beginWhile(() => Math.random() > 0.9)
-				.execute(() => {  console.log("WHILE")})
+					.execute(() => {  console.log("WHILE")})
 				.endWhile()
 			//	.beginInterval(2)
 			//	.execute(() => { console.log("interval")})
