Add example for executor component

--- a/examples/rotation.html
+++ b/examples/rotation.html
@@ -27,7 +27,7 @@
 			UNIT_SIZE = 100;
 
 			// debugging
-			scene.addGlobalComponent(new DebugComponent(document.getElementById("debugSect")));
+			scene.addGlobalComponent(new DebugComponent(false, document.getElementById("debugSect")));
 
 
 			let rect1 = new GameObject("rect1");
