Add support for function arguments for the executor component

--- a/examples/executor2.html
+++ b/examples/executor2.html
@@ -38,15 +38,9 @@
 			.withCenteredOrigin()
 			.withComponent(new BasicRenderer())
 			.withComponent(new ExecutorComponent()
-				.beginRepeat(0)
-				.execute(() => anim1 = new RotationAnimation(0,360))
-				.execute(() => anim2 = new TranslateAnimation(1,1,2,1,1))
-				.addComponent(anim1) // TODO pass by function also
-				.addComponent(anim2)
-				.waitForFinish(anim1)
-				.waitForFinish(anim2)
-				.removeComponent("RotationAnimation")
-				.removeComponent("TranslateAnimation")
+				.beginRepeat(3)
+				.addComponentAndWait(() => new RotationAnimation(0,1,1)) 
+				.addComponentAndWait(() => new TranslateAnimation(1,1,2,2,1))
 				.endRepeat()
 			)
 			.asGlobal()
