--- a/examples/rotation.html
+++ b/examples/rotation.html
@@ -11,11 +11,25 @@
 	<canvas id="gameCanvas" width="600" height="400"></canvas>
 	<!-- debugging window -->
 	<div id="debugSect" style="height:900px;overflow:scroll;float:left; font-family:'Courier New', Courier, monospace"></div>
-	<script src="../js/imageloader.js"></script>
-	<script src="../js/compengine.js"></script>
-	<script src="../js/compenginecom.js"></script>
-	<script src="../js/utils.js"></script>
-	<script src="../js/sortedarray.js"></script>
+	<script src="../js/dodoengine/imageloader.js"></script>
+	<script src="../js/dodoengine/utils.js"></script>
+	<script src="../js/dodoengine/component.js"></script>
+	<script src="../js/dodoengine/gameobject.js"></script>
+	<script src="../js/dodoengine/gameobjectbuilder.js"></script>
+	<script src="../js/dodoengine/constants.js"></script>
+	<script src="../js/dodoengine/flags.js"></script>
+	<script src="../js/dodoengine/mesh.js"></script>
+	<script src="../js/dodoengine/msg.js"></script>
+	<script src="../js/dodoengine/scene.js"></script>
+	<script src="../js/dodoengine/trans.js"></script>
+	<script src="../js/dodoengine/bbox.js"></script>
+	<script src="../js/dodoengine/sortedarray.js"></script>
+
+	<script src="../js/dodocomponents/animation.js"></script>
+	<script src="../js/dodocomponents/basicrenderer.js"></script>
+	<script src="../js/dodocomponents/debugcomponent.js"></script>
+	<script src="../js/dodocomponents/executorcomponent.js"></script>
+	<script src="../js/dodocomponents/inputmanager.js"></script>
 	<script src="../js/main.js"></script>
 
 	<script type="text/javascript">
