--- a/tests/run.html
+++ b/tests/run.html
@@ -9,11 +9,26 @@
 
 <body>
 	<canvas id="gameCanvas" width="600" height="400"></canvas>
-	<script src="../js/imageloader.js"></script>
-	<script src="../js/compengine.js"></script>
-	<script src="../js/compenginecom.js"></script>
-	<script src="../js/utils.js"></script>
-	<script src="../js/sortedarray.js"></script>
+	<script src="../js/dodoengine/imageloader.js"></script>
+	<script src="../js/dodoengine/utils.js"></script>
+	<script src="../js/dodoengine/component.js"></script>
+	<script src="../js/dodoengine/gameobject.js"></script>
+	<script src="../js/dodoengine/gameobjectbuilder.js"></script>
+	<script src="../js/dodoengine/constants.js"></script>
+	<script src="../js/dodoengine/flags.js"></script>
+	<script src="../js/dodoengine/mesh.js"></script>
+	<script src="../js/dodoengine/msg.js"></script>
+	<script src="../js/dodoengine/scene.js"></script>
+	<script src="../js/dodoengine/trans.js"></script>
+	<script src="../js/dodoengine/bbox.js"></script>
+	<script src="../js/dodoengine/sortedarray.js"></script>
+
+	<script src="../js/dodocomponents/animation.js"></script>
+	<script src="../js/dodocomponents/basicrenderer.js"></script>
+	<script src="../js/dodocomponents/debugcomponent.js"></script>
+	<script src="../js/dodocomponents/executorcomponent.js"></script>
+	<script src="../js/dodocomponents/inputmanager.js"></script>
+
 	<script src="tinytest.js"></script>
 	<script src="tests.js"></script>
 
