--- a/examples/tests.html
+++ b/examples/tests.html
@@ -9,11 +9,7 @@
 
 <body>
 	<canvas id="gameCanvas" width="600" height="400"></canvas>
-	<script src="../ts/tests/tests.ts"></script>
-
-	<script type="text/javascript">
-		runTests();
-	</script>
+	<script src="tests.ts"></script>
 </body>
 
 </html>
