Fix image example

--- a/examples/rotation.html
+++ b/examples/rotation.html
@@ -11,93 +11,6 @@
 	<canvas id="gameCanvas" width="600" height="400"></canvas>
 	<!-- debugging window -->
 	<div id="debugSect" style="height:900px;overflow:scroll;float:left; font-family:'Courier New', Courier, monospace"></div>
-	<script src="../js/dodoengine/imageloader.js"></script>
-	<script src="../js/dodoengine/utils.js"></script>
-	<script src="../js/dodoengine/component.js"></script>
-	<script src="../js/dodoengine/gameobject.js"></script>
-	<script src="../js/dodoengine/gameobjectbuilder.js"></script>
-	<script src="../js/dodoengine/constants.js"></script>
-	<script src="../js/dodoengine/flags.js"></script>
-	<script src="../js/dodoengine/mesh.js"></script>
-	<script src="../js/dodoengine/msg.js"></script>
-	<script src="../js/dodoengine/scene.js"></script>
-	<script src="../js/dodoengine/trans.js"></script>
-	<script src="../js/dodoengine/bbox.js"></script>
-	<script src="../js/dodoengine/sortedarray.js"></script>
-
-	<script src="../js/dodocomponents/animation.js"></script>
-	<script src="../js/dodocomponents/basicrenderer.js"></script>
-	<script src="../js/dodocomponents/debugcomponent.js"></script>
-	<script src="../js/dodocomponents/executorcomponent.js"></script>
-	<script src="../js/dodocomponents/inputmanager.js"></script>
-	<script src="../js/main.js"></script>
-
-	<script type="text/javascript">
-		// Start a new game
-		function newGame() {
-			scene.clearScene();
-
-			// unit size is 100 px!
-			UNIT_SIZE = 100;
-
-			// debugging
-			scene.addGlobalComponent(new DebugComponent(false, document.getElementById("debugSect")));
-
-
-			let rect1 = new GameObject("rect1");
-			rect1.mesh = new RectMesh("rgb(255,0,0)", 1, 1); // 100x100 pixels
-			rect1.trans.setPosition(2, 2);
-			rect1.trans.rotationOffsetX = 0.5;
-			rect1.trans.rotationOffsetY = 0.5;
-			rect1.addComponent(new BasicRenderer());
-			rect1.addComponent(new RotationAnim());
-			scene.addGlobalGameObject(rect1);
-
-			let rect2 = new GameObject("rect2");
-			rect2.mesh = new RectMesh("rgb(0,255,0)", 1, 1); // 100x100 pixels
-			rect2.trans.setPosition(3.5, 2);
-			rect2.trans.rotationOffsetX = 0.5;
-			rect2.trans.rotationOffsetY = 0.5;
-			rect2.addComponent(new BasicRenderer());
-			rect2.addComponent(new RotationAnim());
-			scene.addGlobalGameObject(rect2);
-		}
-
-		class RotationAnim extends Component {
-			oninit() {
-				this.subscribe("STOP");
-			}
-
-			onmessage(msg) {
-				if (msg.action == "STOP") {
-					this.finish();
-				}
-			}
-
-			update(delta, absolute) {
-				this.owner.trans.rotation += delta;
-			}
-		}
-
-		class MovingAnim extends Component {
-			oninit() {
-				this.initPosX = this.owner.trans.posX;
-				this.initPosY = this.owner.trans.posY;
-				this.radius = 1;
-				this.subscribe("STOP");
-			}
-
-			onmessage(msg) {
-				if (msg.action == "STOP") {
-					this.finish();
-				}
-			}
-
-			update(delta, absolute) {
-				this.owner.trans.setPosition(this.initPosX + this.radius * Math.cos(absolute),
-					this.initPosY + this.radius * Math.sin(absolute));
-			}
-		}
-	</script>
+	<script src="./rotation.ts"></script>
 </body>
 </html>
