--- a/examples/executor.html
+++ b/examples/executor.html
@@ -11,60 +11,6 @@
 	<canvas id="gameCanvas" width="600" height="400"></canvas>
 	<!-- debugging window -->
 	<div id="debugSect" style="height:900px;overflow:scroll;float:left; font-family:'Courier New', Courier, monospace"></div>
-	<script src="../js/dodoengine/imageloader.js"></script>
-	<script src="../js/dodoengine/utils.js"></script>
-	<script src="../js/dodoengine/component.js"></script>
-	<script src="../js/dodoengine/gameobject.js"></script>
-	<script src="../js/dodoengine/gameobjectbuilder.js"></script>
-	<script src="../js/dodoengine/constants.js"></script>
-	<script src="../js/dodoengine/flags.js"></script>
-	<script src="../js/dodoengine/mesh.js"></script>
-	<script src="../js/dodoengine/msg.js"></script>
-	<script src="../js/dodoengine/scene.js"></script>
-	<script src="../js/dodoengine/trans.js"></script>
-	<script src="../js/dodoengine/bbox.js"></script>
-	<script src="../js/dodoengine/sortedarray.js"></script>
-
-	<script src="../js/dodocomponents/animation.js"></script>
-	<script src="../js/dodocomponents/basicrenderer.js"></script>
-	<script src="../js/dodocomponents/debugcomponent.js"></script>
-	<script src="../js/dodocomponents/executorcomponent.js"></script>
-	<script src="../js/dodocomponents/inputmanager.js"></script>
-	<script src="../js/main.js"></script>
-
-	<script type="text/javascript">
-		// Start a new game
-		function newGame() {
-			scene.clearScene();
-
-			// unit size is 100 px!
-			UNIT_SIZE = 100;
-
-			// debugging
-			scene.addGlobalComponent(new DebugComponent(false, document.getElementById("debugSect")));
-
-
-			let obj = new GameObjectBuilder("rect1")
-			.withMesh(new RectMesh("rgb(255,0,0)", 1, 1))
-			.withPosition(2,2)
-			.withCenteredOrigin()
-			.withComponent(new BasicRenderer())
-			.withComponent(new ExecutorComponent()
-				.beginInterval(0)
-				.execute((cmp) => cmp.addComponentAndWait(new TranslateAnimation(1,1,2,1,1)))
-				.removePrevious()
-				.execute((cmp) => cmp.addComponentAndWait(new TranslateAnimation(2,1,2,2,1)))
-				.removePrevious()
-				.execute((cmp) => cmp.addComponentAndWait(new TranslateAnimation(2,2,1,2,1)))
-				.removePrevious()
-				.execute((cmp) => cmp.addComponentAndWait(new TranslateAnimation(1,2,1,1,1)))
-				.removePrevious()
-				.endInterval()
-			)
-			.asGlobal()
-			.build(scene);
-		}
-
-	</script>
+	<script src="./executor.ts"></script>
 </body>
 </html>
