Refactor typescript code

--- a/examples/chaining.html
+++ b/examples/chaining.html
@@ -11,6 +11,6 @@
 	<canvas id="gameCanvas" width="600" height="400"></canvas>
 	<!-- debugging window -->
 	<div id="debugSect" style="height:900px;overflow:scroll;float:left; font-family:'Courier New', Courier, monospace"></div>
-	<script src="./executor.ts"></script>
+	<script src="./chaining.ts"></script>
 </body>
 </html>
